<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
<string name="libfabiBuySellEnum2">出售</string>
<string name="libcodeTypeEnum4">设置资金密码</string>
<string name="liblib_bottom_sheet_shop_check20">成为商家才能进行出售哦~</string>
<string name="libcodeTypeEnum3">绑定手机</string>
<string name="libcodeTypeEnum2">忘记密码</string>
<string name="libcodeTypeEnum1">用户注册</string>
<string name="libcodeTypeEnum8">验证码登录</string>
<string name="libcodeTypeEnum7">提币验证码</string>
<string name="libcodeTypeEnum6">修改登录密码</string>
<string name="libcodeTypeEnum5">谷歌验证</string>
<string name="libpatternUtils28">甘肃</string>
<string name="libpatternUtils29">青海</string>
<string name="liblib_bottom_sheet_selector80">取消</string>
<string name="libpatternUtils24">贵州</string>
<string name="libpatternUtils25">云南</string>
<string name="libpatternUtils26">西藏</string>
<string name="libpatternUtils27">陕西</string>
<string name="libpatternUtils20">广西</string>
<string name="libpatternUtils21">海南</string>
<string name="libpatternUtils22">重庆</string>
<string name="libpatternUtils23">四川</string>
<string name="libcopyUtil1">复制成功</string>
<string name="libpatternUtils3">河北</string>
<string name="libappCircleCheckUtil3">登录/注册</string>
<string name="liblib_activity_finger60">请轻触感应器验证指纹</string>
<string name="libpatternUtils2">天津</string>
<string name="libappCircleCheckUtil2">您当前还未登录，请先登录或注册</string>
<string name="libpatternUtils5">内蒙古</string>
<string name="libappCircleCheckUtil5">去认证</string>
<string name="libpatternUtils4">山西</string>
<string name="libappCircleCheckUtil4">您还未完成初级实名认证，去完成？</string>
<string name="libpatternUtils1">北京</string>
<string name="libcaptchaUtil1">验证失败</string>
<string name="libappCircleCheckUtil7">您的高级认证正在审核，请耐心等待。</string>
<string name="libcaptchaUtil2">验证出错</string>
<string name="libappCircleCheckUtil6">您还未完成高级实名认证，去完成？</string>
<string name="libappCircleCheckUtil9">您还未设置资金密码，去设置？</string>
<string name="libappCircleCheckUtil8">资金密码</string>
<string name="liblib_bottom_sheet_pwd330">粘贴</string>
<string name="libpatternUtils35">国外</string>
<string name="libpatternUtils31">新疆</string>
<string name="libpatternUtils32">台湾</string>
<string name="libpatternUtils33">香港</string>
<string name="libpatternUtils34">澳门</string>
<string name="libpatternUtils7">吉林</string>
<string name="libpatternUtils6">辽宁</string>
<string name="liblib_fragment_app_update220">立即升级</string>
<string name="liblib_activity_finger100">使用密码登录</string>
<string name="libpatternUtils9">上海</string>
<string name="libfabiBuySellEnum1">购买</string>
<string name="libpatternUtils8">黑龙江</string>
<string name="libpatternUtils30">宁夏</string>
<string name="liblib_include_head80">返回</string>
<string name="libbuySellEnum1">做多</string>
    <string name="libbuySellEnum11">卖出</string>
<string name="libtipUtil2">确定</string>
<string name="liblib_pop_kchart40">主图</string>
<string name="libappCircleCheckUtil1">提醒</string>
<string name="libbuySellEnum2">做空</string>
    <string name="libbuySellEnum21">买入</string>
<string name="liblib_mvc_error_view80">重试</string>
<string name="libexceptionUtil1">网络异常</string>
<string name="libexceptionUtil3">请先登录</string>
<string name="libexceptionUtil2">网络连接超时</string>
<string name="libpatternUtils17">湖北</string>
<string name="libpatternUtils18">湖南</string>
<string name="libschemeUtil6">两次密码输入不一致</string>
<string name="liblib_activity_finger_login40">使用密码验证登录</string>
<string name="libpatternUtils19">广东</string>
<string name="libschemeUtil5">邮箱格式错误</string>
<string name="libschemeUtil4">手机号码格式错误</string>
<string name="libpatternUtils13">福建</string>
<string name="libpatternUtils14">江西</string>
<string name="libpatternUtils15">山东</string>
<string name="libpatternUtils16">河南</string>
<string name="libbottomSheetUtil5">请输入手机验证码</string>
<string name="liblib_bottom_sheet_pwd190">请输入资金密码</string>
<string name="libpatternUtils10">江苏</string>
<string name="libappCircleCheckUtil10">前往</string>
<string name="libpatternUtils11">浙江</string>
<string name="libappCircleCheckUtil11">已认证商家才能发布交易，马上认证吧</string>
<string name="libpatternUtils12">安徽</string>
<string name="libappCircleCheckUtil12">您的商家认证正在审核中，请耐心等待！</string>
<string name="libsendCodeUtil1">获取验证码</string>
<string name="libschemeUtil3">手机号码或邮箱格式错误</string>
<string name="libbottomSheetUtil1">商家认证已拒绝，请重新申请成为商家</string>
<string name="liblib_dialog_gonggao80">最新公告</string>
<string name="libschemeUtil2">验证码错误</string>
<string name="libbottomSheetUtil2">验证邮箱</string>
<string name="libschemeUtil1">密码格式错误</string>
<string name="libbottomSheetUtil3">请输入邮箱验证码</string>
<string name="libbottomSheetUtil4">验证手机</string>
<string name="libloadViewFactory2">正在加载中..</string>
<string name="libloadViewFactory3">加载失败，点击重新加载</string>
<string name="libloadViewFactory4">网络请求错误</string>
<string name="libloadViewFactory1">点击加载更多</string>
<string name="libbaseActivity1">再次点击退出程序</string>
<string name="liblib_fragment_app_update130">更新内容</string>
<string name="libtimeFormatUtil6">天</string>
<string name="libtimeFormatUtil5">小时</string>
<string name="libcommonUtil1">繁体中文</string>
<string name="libtimeFormatUtil4">分</string>
<string name="libtimeFormatUtil3">秒</string>
<string name="libtimeFormatUtil2">yyyy年MM月</string>
<string name="libtimeFormatUtil1">mm分ss秒</string>
<string name="liblib_mvc_empty_view80">暂无记录</string>
<string name="liblib_mvc_error_view60">网络异常请重试</string>
<string name="liblib_pop_kchart_more80">月线</string>
<string name="libcommonUtil2">繁体中文</string>
<string name="liblib_activity_finger20">通过指纹验证后方可交易</string>
<string name="liblib_bottom_sheet_pwd530">提交</string>
<string name="libfingerActivity1">验证失败，剩余次数</string>
<string name="libfingerActivity2">验证失败，请重新登录</string>
<string name="liblib_activity_finger_login150">其他账号</string>
<string name="librxEncryptTool1">长度不是偶数</string>
<string name="liblib_bottom_sheet_shop_check40">去成为商家</string>
<string name="libpayTypeEnum3">银行卡</string>
<string name="libpayTypeEnum2">支付宝</string>
<string name="liblib_fragment_app_update80">版本更新啦！</string>
<string name="liblib_activity_finger_login80">请输入登录密码</string>
<string name="libpayTypeEnum1">微信</string>
<string name="libareaCodeEnum2">美国(AMERICA)</string>
<string name="libareaCodeEnum1">中国(CHINA)</string>
<string name="liblib_pop_kchart190">副图</string>
<string name="liblib_pop_kchart_more60">周线</string>
<string name="liblib_bottom_sheet_pwd310">请输入谷歌验证码</string>
<string name="liblib_bottom_sheet_pwd60">安全验证</string>
<string name="liblib_activity_finger_login130">确认</string>
<string name="liblib_bottom_sheet_pwd270">谷歌验证码</string>
<string name="liblib_mvc_loading_view80">加载中</string>
<string name="liblib_dialog_gonggao100">我知道了</string>
    <string name="lib_ban_ben_updata">版本更新啦！</string>
    <string name="lib_ban_ben_updata_content">更新内容</string>
    <string name="lib_zui_new_gong_gao">最新公告</string>
    <string name="lib_gong_gao_detail">提醒</string>
    <string name="lib_yanzheng">请输入您的账号 %s 的验证码</string>
    <string name="lib_input_content">请输入申诉内容</string>
    <string name="lib_success_fu">我已付款成功，卖家未及时放行</string>
    <string name="lib_zhuanzhang">我并没有收到买家的转账</string>
    <string name="lib_zhuanmoney">我向卖家多转了钱</string>
    <string name="lib_bufu">收到买家付款，但是金额不符</string>
    <string name="lib_other">其他</string>
    <string name="lib_senshu">申诉</string>
    <string name="lib_phone_yanzheng">手机验证码</string>
    <string name="lib_dianji_get">点击获取</string>
    <string name="lib_diushi">安全项丢失?</string>
    <string name="lib_xiangyou">向右滑动验证</string>
    <string name="lib_liji">立即升级</string>
    <string name="lib_xuanze">选择计价货币</string>
    <string name="lib_yanzhengma">验证码</string>
    <string name="lib_chongxin">%s秒后重新发送</string>
    <string name="lib_huoqu">点击获取</string>
    <string name="lib_qingxian">请先实名</string>
</resources>
