<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lib_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="100pt"
        android:gravity="center"
        android:textColor="@color/libTextWhite"
        android:textSize="25pt" />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_marginTop="40pt"
        android:layout_marginStart="20pt"
        android:layout_marginEnd="20pt"
        android:background="@drawable/lib_shape_5e8_stoke"
        android:hint="@string/lib_input_content"
        android:padding="20pt"
        android:layout_gravity="start"
        android:textColor="@color/libTextWhite"
        android:gravity="start"
        android:textColorHint="@color/libTextGray"
        android:layout_height="200pt" />
<RadioGroup
    android:id="@+id/radiogroup"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="60pt"
    android:layout_marginStart="60pt"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/radio_no_coin"
        android:layout_width="wrap_content"
        android:text="@string/lib_success_fu"
        android:textColor="@color/libTextWhite"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:id="@+id/radio_no_paid"
        android:layout_marginTop="20pt"
        android:layout_width="wrap_content"
        android:text="@string/lib_zhuanzhang"
        android:textColor="@color/libTextWhite"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:id="@+id/radio_more_paid"
        android:layout_marginTop="20pt"
        android:layout_width="wrap_content"
        android:text="@string/lib_zhuanmoney"
        android:textColor="@color/libTextWhite"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:id="@+id/radio_more_coin"
        android:layout_marginTop="20pt"
        android:layout_width="wrap_content"
        android:text="@string/lib_bufu"
        android:textColor="@color/libTextWhite"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:id="@+id/radio_other"
        android:layout_marginTop="20pt"
        android:layout_width="wrap_content"
        android:text="@string/lib_other"
        android:textColor="@color/libTextWhite"
        android:layout_height="wrap_content"/>
</RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="2pt"
        android:background="@color/libBg2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80pt"
        android:layout_marginTop="50pt"
        android:layout_marginBottom="20pt"
        android:paddingStart="20pt"
        android:paddingEnd="20pt"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0pt"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="50pt"
            android:layout_weight="1"
            android:background="@drawable/lib_button_cancel"
            android:gravity="center"
            android:text="@string/common_cancel"
            android:textColor="@color/libApp"
            android:textSize="32pt" />

        <TextView
            android:id="@+id/tvSure"
            android:layout_width="0pt"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/lib_button_sure"
            android:gravity="center"
            android:text="@string/lib_senshu"
            android:textColor="@color/libSolidButtonText"
            android:textSize="32pt" />
    </LinearLayout>

</LinearLayout>
