<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lib_shape_fff_top_corner_20"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100pt"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="50pt"
            android:paddingEnd="50pt">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/liblib_bottom_sheet_pwd60"
                android:textColor="@color/libTextWhite"
                android:textSize="34pt" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liblib_bottom_sheet_selector80"
                android:textColor="@color/libTextHint"
                android:textSize="26pt"
                android:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="50pt"
            android:paddingEnd="50pt">


            <LinearLayout
                android:id="@+id/llPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100pt"
                    android:gravity="center"
                    android:text="@string/libappCircleCheckUtil8"
                    android:textColor="@color/libTextTitle"
                    android:textSize="28pt" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100pt">

                    <EditText
                        android:id="@+id/etPwd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:digits="@string/common_filter_number_letter"
                        android:gravity="center_vertical"
                        android:hint="@string/liblib_bottom_sheet_pwd190"
                        android:inputType="textWebPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="@color/libTextWhite"
                        android:textColorHint="@color/libTextHint"
                        android:textSize="30pt" />


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1pt"
                    android:background="@color/libDivider" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llGoogleCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100pt"
                    android:gravity="center"
                    android:text="@string/liblib_bottom_sheet_pwd270"
                    android:textColor="@color/libTextTitle"
                    android:textSize="28pt" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100pt">

                    <EditText
                        android:id="@+id/etGoogleCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/liblib_bottom_sheet_pwd310"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:paddingEnd="100pt"
                        android:textColor="@color/libTextWhite"
                        android:textColorHint="@color/libTextHint"
                        android:textSize="30pt" />

                    <TextView
                        android:id="@+id/tvPaste"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/liblib_bottom_sheet_pwd330"
                        android:textColor="@color/libApp"
                        android:textSize="28pt"
                        android:visibility="gone" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1pt"
                    android:background="@color/libDivider" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMobileCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCheckMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="100pt"
                    android:gravity="center"
                    android:text="@string/libbottomSheetUtil4"
                    android:textColor="@color/libTextTitle"
                    android:textSize="28pt" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100pt">

                    <EditText
                        android:id="@+id/etMobileCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:digits="@string/common_filter_number_letter"
                        android:gravity="center_vertical"
                        android:hint="@string/libbottomSheetUtil5"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingEnd="100pt"
                        android:textColor="@color/libTextWhite"
                        android:textColorHint="@color/libTextHint"
                        android:textSize="30pt" />

                    <Button
                        android:id="@+id/btSendCode"
                        style="@style/libButtonStyle.CheckCode"
                        android:layout_width="200pt"
                        android:layout_height="60pt"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textSize="28pt" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1pt"
                    android:background="@color/libDivider" />


            </LinearLayout>


            <Button
                android:id="@+id/btSubmit"
                style="@style/libButtonStyle.Sure"
                android:layout_width="match_parent"
                android:layout_height="90pt"
                android:layout_marginTop="60pt"
                android:layout_marginBottom="33pt"
                android:text="@string/liblib_bottom_sheet_pwd530" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
